$Id: ChangeLog,v 1.7 2006-01-05 02:07:50 karl Exp $

2005-11-28 Karl Lehenbauer <karl-bsd@sc.com>
    * Add support for ::bsd::getkey to read a single key from the keybaord
      in raw mode and return the character value as an integer

2005-11-23 Karl Lehenbauer <karl-bsd@sc.com>
    * Add support for MNT_JAILDEVFS and MNT_IGNORE flags when present.

2005-08-07 Karl Lehenbauer <karl-bsd@sc.com>

    * Put all commands in a "bsd" namespace
    * Export commands from "bsd" namespace
    * Add interface to setproctitle
    * Use the proper secure idiom, setproctitle("%s", string), to prevent
      stack mangling, etc.
    * Rudimentary manpage bsd.n.
    * Add support for getfsstat flags MNT_MULTILABEL (multiLabel) and
      MNT_ACLS (aclsEnabled).
