@@ -1,0 +1,1 @@
+./configure --prefix=/opt/local
