@@ -3,7 +3,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tcl installation
 dnl	to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.2 2006-01-05 02:07:50 karl Exp $
+# RCS: @(#) $Id: configure.in,v 1.3 2006-01-05 03:23:55 karl Exp $
 
 #-----------------------------------------------------------------------
 # configure.in for Karl's BSD interface.  
@@ -70,7 +70,7 @@ TEA_SETUP_COMPILER
 # and PKG_TCL_SOURCES.
 #-----------------------------------------------------------------------
 
-TEA_ADD_SOURCES([bsd.c bsdgetkey.c tclbsd.c])
+TEA_ADD_SOURCES([bsd.c bsdgetkey.c bsdsyslog.c tclbsd.c])
 TEA_ADD_HEADERS([])
 TEA_ADD_INCLUDES([])
 TEA_ADD_LIBS([])
@@ -179,6 +179,11 @@ TEA_MAKE_LIB
 
 TEA_PROG_TCLSH
 #TEA_PROG_WISH
+
+#-----------
+# Check to see if we have setproctitle
+#-----------
+AC_CHECK_FUNCS(setproctitle)
 
 #--------------------------------------------------------------------
 # Finally, substitute all of the various values into the Makefile.
